--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -15,28 +15,13 @@
         android:layout_margin="18dp"
         android:background="#30ffffff"
         android:drawableRight="@drawable/baseline_mail_24"
-        android:drawablePadding="30dp"
+        android:drawablePadding="28dpdp"
         android:hint="Email"
-        android:padding="26dp"
+        android:padding="20dp"
         android:textColorHint="@color/white"
         android:textSize="18dp" />
 
-    <EditText
-        android:id="@+id/Username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Email"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="18dp"
-        android:background="#30ffffff"
-        android:drawableRight="@drawable/baseline_person_24"
-        android:drawablePadding="30dp"
-        android:hint="Username"
-        android:padding="30dp"
-        android:textColorHint="@color/white"
-        android:textSize="18dp" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -44,29 +29,14 @@
         android:hint="Password"
         android:background="#30ffffff"
         android:layout_margin="18dp"
-        android:layout_below="@+id/Username"
-        android:padding="30dp"
+        android:layout_below="@+id/Email"
+        android:padding="20dp"
         android:drawablePadding="30dp"
         android:drawableRight="@drawable/baseline_key_24"
         android:id="@+id/Password1"
         android:textSize="18dp"/>
 
-    <EditText
-        android:id="@+id/Password2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/Password1"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="18dp"
-        android:background="#30ffffff"
-        android:drawableRight="@drawable/baseline_key_24"
-        android:drawablePadding="30dp"
-        android:hint="Confirm Password"
-        android:padding="30dp"
-        android:textColorHint="@color/white"
-        android:textSize="18dp" />
+
     <Button
         android:id="@+id/CreateAccount"
         android:layout_width="match_parent"
@@ -75,13 +45,20 @@
         android:text="Sign Up"
         android:layout_marginTop="60sp"
         android:layout_marginBottom="20sp"
-        android:layout_below="@+id/Password2"
-        android:padding="30dp"
-        android:textSize="30dp"
-
+        android:layout_below="@+id/Password1"
+        android:padding="15dp"
+        android:textSize="15dp"
 
         />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/CreateAccount"
+        android:layout_marginTop="15dp"
+        android:gravity="center_horizontal"
+        android:text="Login"
+        android:textColor="@color/white" />
 
 
 </RelativeLayout>
