--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -15,7 +15,7 @@
         android:layout_margin="18dp"
         android:background="#30ffffff"
         android:drawableRight="@drawable/baseline_mail_24"
-        android:drawablePadding="28dpdp"
+        android:drawablePadding="28dp"
         android:hint="Email"
         android:padding="20dp"
         android:textColorHint="@color/white"
@@ -33,7 +33,7 @@
         android:padding="20dp"
         android:drawablePadding="30dp"
         android:drawableRight="@drawable/baseline_key_24"
-        android:id="@+id/Password1"
+        android:id="@+id/Password"
         android:textSize="18dp"/>
 
 
@@ -45,19 +45,20 @@
         android:text="Sign Up"
         android:layout_marginTop="60sp"
         android:layout_marginBottom="20sp"
-        android:layout_below="@+id/Password1"
+        android:layout_below="@+id/Password"
         android:padding="15dp"
         android:textSize="15dp"
 
         />
 
     <TextView
+        android:id="@+id/LoginNow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/CreateAccount"
         android:layout_marginTop="15dp"
         android:gravity="center_horizontal"
-        android:text="Login"
+        android:text="@string/login"
         android:textColor="@color/white" />
 
 
